--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+ .info-splash {
+    margin: 100px auto;
+ }
+
+ .splash-btns {
+    display: flex;
+    flex-direction: column;
+ }
+
+ .splash-link {
+    margin: 2px black solid;
+ }
