add htm to the gruop view

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Groups</h1>
+<h1>Categories</h1>
 
 <div id="groups">
   <% @groups.each do |group| %>
