--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,7 @@
 <div class="splash-btns">
 <%= link_to "Log In", user_session_path, {:class => "splash-link"} %>
 
-<%= link_to "Sign Up", new_user_path %>
+<%= link_to "Sign Up", new_user_session_path %>
 
 <%= link_to "Forgot Password", new_user_password_path %>
 </div>
