--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Categories</h1>
 
+<%= link_to "Log Out", destroy_user_session_path %> 
+
 <div id="groups">
   <% @groups.each do |group| %>
     <%= render group %>
