--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,8 +1,30 @@
 <p style="color: green"><%= notice %></p>
 
 <%= render @group %>
-
 <div>
+
+<% myamt = 0 %>
+<% @group.transactions.each do |transaction| %>
+  <% myamt += transaction.amount %>
+<% end %>
+<p>Total Amount: <%= myamt  %></p>
+
+<% @group.transactions.each do |transaction| %>
+  <div class="user-container-index">
+    
+    <div class="user-info">
+    
+      <p class="user-numbers">Name: <%= transaction.name %></p>
+      <p class="user-numbers">Amount: <%= transaction.amount %></p>
+      <p class="user-numbers">Date: <%= transaction.created_at %></p>
+    </div>
+</div>
+
+<% end %>
+
+<%= link_to "Add a new Transaction", '/groups/:group_id/transactions/new' %>
+
+
   <%= link_to "Edit this group", edit_group_path(@group) %> |
   <%= link_to "Back to groups", groups_path %>
 
