--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,10 +4,14 @@
 
 <%= link_to "Log Out", destroy_user_session_path %> 
 
+
 <div id="groups">
   <% @groups.each do |group| %>
-    <%= render group %>
+    <% if group.icon.attached? %>
+    <image class="icon-image" src="<%=(url_for(group.icon)) %>>
+    <% end %>
 
+    <%= render group %>
     <% myamt = 0 %>
     <% group.transactions.each do |transaction| %>
       <% myamt += transaction.amount %>
