--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
 
 <%= link_to "LOG IN", user_session_path, class:"btn btn-primary my-btn" %>
 
-<%= link_to "SIGN UP", new_user_session_path, class:"btn btn-light my-btn" %>
+<%= link_to "SIGN UP", new_user_registration_path, class:"btn btn-light my-btn" %>
 
 <%= link_to "FORGOT PASSSWORD", new_user_password_path, class:"btn btn-light my-btn" %>
 </div>
