--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,29 +1,37 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Categories</h1>
-
-<%= link_to "Log Out", destroy_user_session_path %> 
+<div class="myclass">
+  <%= link_to "Back", users_path, class:"back-link" %>
+  <p>TRANSACTIONS</p>
+  <div >
+  <%= link_to "Log Out", destroy_user_session_path,  class: "c-actions" %> 
+  </div>
+</div>
 
 
 <div id="groups">
   <% @groups.each do |group| %>
-    <% if group.icon.attached? %>
-    <image class="icon-image" src="<%=(url_for(group.icon)) %>>
-    <% end %>
 
+      <% if group.icon.attached? %>
+      <image class="icon-image" src="<%=(url_for(group.icon)) %>>
+      <% end %>
+  
+
+  
     <%= render group %>
     <% myamt = 0 %>
+
     <% group.transactions.each do |transaction| %>
       <% myamt += transaction.amount %>
     <% end %>
-    <p>Total Amount: <%= myamt  %></p>
+    
+    <p class="amt-total"> $<%= myamt  %></p>
 
     <p>
-      <%= link_to "Show this group", group %>
+      <%= link_to "Show this group", group, class: "group-actions"  %>
     </p>
+ 
   <% end %>
 </div>
 
+<%= link_to "Add a new Category", new_group_path, class:"btn btn-light my-cstm-btn" %>
 
-
-<%= link_to "Add a new Category", new_group_path %>
+<%= link_to "Add a new Entity", new_group_path, class:"btn btn-light my-cstm-btn" %>
