--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,7 +62,8 @@
   margin: 10px auto;
 }
 
-.my-cstm-btn {
+.my-cstm-btn,
+.my-btn2 {
   width: 80%;
   height: 45px;
   margin-top: 18px;
@@ -125,4 +126,8 @@
   justify-content: space-around;
   flex-direction: row;
   background-color: blue;
+}
+
+.special-image-upload {
+  margin: 15px;
 }
