--- a/app/views/entities/_entity.html.erb
+++ b/app/views/entities/_entity.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id entity %>">
   <p>
     <strong>Authorid:</strong>
-    <%= entity.authorid %>
+    <%= entity.author_id %>
   </p>
 
   <p>
