--- a/app/views/entities/_form.html.erb
+++ b/app/views/entities/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :authorid, style: "display: block" %>
-    <%= form.number_field :authorid %>
+    <%= form.label :author_id, style: "display: block" %>
+    <%= form.number_field :author_id %>
   </div>
 
   <div>
