--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -26,7 +26,7 @@
     <p class="amt-total"> $<%= myamt  %></p>
 
     <p>
-      <%= link_to "Show this group", group, class: "group-actions"  %>
+      <%= link_to "Show Category", group, class: "group-actions"  %>
     </p>
  
   <% end %>
@@ -34,4 +34,4 @@
 
 <%= link_to "Add a new Category", new_group_path, class:"btn btn-light my-cstm-btn" %>
 
-<%= link_to "Add a new Entity", new_group_path, class:"btn btn-light my-cstm-btn" %>
+<%= link_to "Add a new Entity", new_entity_path, class:"btn btn-light my-cstm-btn" %>
