--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,10 @@
+<div class="myclass">
+  <%= link_to "Back", groups_path, class:"back-link" %>
+  <p>DETAILS</p>
+  <div >
+  <%= link_to "Log Out", destroy_user_session_path,  class: "c-actions" %> 
+  </div>
+</div>
 <p style="color: green"><%= notice %></p>
 
 <% if @group.icon.attached? %>
@@ -5,31 +12,30 @@
 <% end %>
 
 <%= render @group %>
-<div>
 
+
+<% @group.transactions.each do |transaction| %>
+  <div class="user-container-index">
+    <div class="user-info">
+      <p class="user-numbers"><strong>Transaction Name:</strong> <%= transaction.name %></p>
+      <p class="user-numbers"><strong>Amount:</strong> $<%= transaction.amount %></p>
+      <p class="user-numbers"><strong>Date:</strong> <%= transaction.created_at %></p>
+      <hr>
+    </div>
+</div>
+<% end %>
+<div>
 <% myamt = 0 %>
 <% @group.transactions.each do |transaction| %>
   <% myamt += transaction.amount %>
 <% end %>
-<p>Total Amount: <%= myamt  %></p>
-
-<% @group.transactions.each do |transaction| %>
-  <div class="user-container-index">
-    
-    <div class="user-info">
-      <p class="user-numbers">Name: <%= transaction.name %></p>
-      <p class="user-numbers">Amount: <%= transaction.amount %></p>
-      <p class="user-numbers">Date: <%= transaction.created_at %></p>
-    </div>
+<d class="payment">
+<p class="payment1"><strong>Total Payment:</strong></p> 
+<p class="payment2">$<%= myamt  %></p>
 </div>
 
-<% end %>
+<%= link_to "Add a new Transaction", '/groups/:group_id/transactions/new', class:"btn btn-light my-cstm-btn" %>
 
-<%= link_to "Add a new Transaction", '/groups/:group_id/transactions/new' %>
-
-
-  <%= link_to "Edit this group", edit_group_path(@group) %> |
-  <%= link_to "Back to groups", groups_path %>
-
-  <%= button_to "Destroy this group", @group, method: :delete %>
+  <%= link_to "Edit this group", edit_group_path(@group), class:"btn btn-light my-cstm-btn" %>
+  <%= button_to "Delete group", @group, method: :delete, class:"btn btn-light my-cstm-btn" %>
 </div>
