--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,6 +1,6 @@
 <div id="<%= dom_id group %>">  
   <p class="name-p">
-    <strong>Name:</strong>
+    <strong>Category:</strong>
     <%= group.name %>
   </p>
 </div>
