--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,27 +1,11 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
- @import "font-awesome";
+@import "font-awesome";
 
-
- .body {
+.body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  overflow:hidden;
- }
+  overflow: hidden;
+}
 
 .info-splash {
   margin: 180px auto;
@@ -79,9 +63,6 @@
   margin: auto;
 }
 
-/* .field {
-  margin: 20px auto;
-} */
 .myclass {
   display: flex;
   justify-content: space-between;
@@ -122,7 +103,7 @@
 }
 
 .field-remember2 {
-  margin: 5px ;
+  margin: 5px;
 }
 
 .groups {
@@ -137,8 +118,7 @@
 }
 
 .user-info {
-  margin: 5px 15px;;
-
+  margin: 5px 15px;
 }
 
 .payment {
