--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -5,7 +5,7 @@
   <%= link_to "Log Out", destroy_user_session_path,  class: "c-actions" %> 
   </div>
 </div>
-
+<p style="color: green"><%= notice %></p>
 <%= render "form", entity: @entity %>
 
 <br>
