ipdate the entities

--- a/app/views/entities/new.html.erb
+++ b/app/views/entities/new.html.erb
@@ -11,5 +11,5 @@
 <br>
 
 <div>
-  <%= link_to "BACK TO ENTITIES", entities_path, class:"btn btn-light my-cstm-btn" %>
+  <%= link_to "BACK TO ENTITIES", group_entities_path, class:"btn btn-light my-cstm-btn" %>
 </div>
