--- a/app/views/entities/_form.html.erb
+++ b/app/views/entities/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: entity) do |form| %>
+<%= form_with url: group_entities_path, scope: :transaction, method: :POST do |form| %>
   <% if entity.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(entity.errors.count, "error") %> prohibited this entity from being saved:</h2>
@@ -11,9 +11,7 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.number_field :id,  placeholder: 'ID', class:"field-login" %>
-  </div>
+ 
 
   <div>
     <%= form.text_field :name,  placeholder: 'Name', class:"field-login" %>
