--- a/app/views/entities/edit.html.erb
+++ b/app/views/entities/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="myclass">
-  <%= link_to "Back", entities_path, class:"back-link" %>
+  <%= link_to "Back", group_entity_path, class:"back-link" %>
   <p>An Entity</p>
   <div >
   <%= link_to "Log Out", destroy_user_session_path,  class: "c-actions" %> 
@@ -11,5 +11,4 @@
 <br>
 
 <div>
-  <%= link_to "Show this entity", @entity, class:"btn btn-light my-cstm-btn" %>
 </div>
