--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -14,11 +14,11 @@
 <%= render @group %>
 
 
-<% @group.transactions.each do |transaction| %>
+<% @group.transactions.includes([:entity]).each do |transaction| %>
   <div class="user-container-index">
     <div class="user-info">
-      <p class="user-numbers"><strong>Transaction Name:</strong> <%= transaction.name %></p>
-      <p class="user-numbers"><strong>Amount:</strong> $<%= transaction.amount %></p>
+      <p class="user-numbers"><strong>Transaction Name:</strong> <%= transaction.entity.name %></p>
+      <p class="user-numbers"><strong>Amount:</strong> $<%= transaction.entity.amount %></p>
       <p class="user-numbers"><strong>Date:</strong> <%= transaction.created_at %></p>
       <hr>
     </div>
@@ -26,16 +26,16 @@
 <% end %>
 <div>
 <% myamt = 0 %>
-<% @group.transactions.each do |transaction| %>
-  <% myamt += transaction.amount %>
+<% @group.entities.each do |transaction| %>
+  <% myamt += transaction.amount.to_i %>
 <% end %>
 <d class="payment">
 <p class="payment1"><strong>Total Payment:</strong></p> 
 <p class="payment2">$<%= myamt  %></p>
 </div>
 
-<%= link_to "Add a new Transaction", '/groups/:group_id/transactions/new', class:"btn btn-light my-cstm-btn" %>
+<%= link_to "Add a new Transaction", new_group_entity_path(@group), class:"btn btn-light my-cstm-btn" %>
 
   <%= link_to "Edit this group", edit_group_path(@group), class:"btn btn-light my-cstm-btn" %>
-  <%= button_to "Delete group", @group, method: :delete, class:"btn btn-light my-cstm-btn" %>
+  
 </div>
